# CPP20-IRCTEST

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLIsts.txt
client/src/: main.cpp
irclibrary/: CMakeLists.txt
irclibrary/src/: library.cppm
server/: CMakeLists.txt
server/src/: main.cpp
